fix to apply padding only to p in overflow areas

--- a/_sass/scroll.scss
+++ b/_sass/scroll.scss
@@ -22,7 +22,7 @@
   height: $page-height;
   overflow: scroll;
 
-  * {
+  p {
     padding-right: $padding-std;
   }
 }
